# symbolism

./: .flake8  Makefile  README.md  pyproject.toml
examples/: foo.py
symbolism/: __init__.py  buffer.py  note.py  scale.py  scales.py  utils.py
tests/: test_scale.py  test_utils.py
